[gd_scene load_steps=5 format=3 uid="uid://cqbd6ya1w441y"]

[ext_resource type="PackedScene" uid="uid://d2i15cdabp3yy" path="res://ui/fried_window/fried_window.tscn" id="1_7i672"]
[ext_resource type="Script" uid="uid://dv2uc5iuf2he4" path="res://ui/fried_window/exit_window/exit_window.gd" id="2_f2l16"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="3_s1ncp"]
[ext_resource type="PackedScene" uid="uid://cq6rcy2ktpx36" path="res://ui/fried_button/fried_button_red.tscn" id="4_c44hp"]

[node name="ExitWindow" instance=ExtResource("1_7i672")]
offset_right = 206.0
offset_bottom = 74.0
script = ExtResource("2_f2l16")
is_invisible_on_close = true

[node name="TitleLabel" parent="M/VBoxContainer/TitleBar/H" index="0"]
text = "Exit"

[node name="CloseButton" parent="M/VBoxContainer/TitleBar/H" index="1"]
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../Body/V/M/FriedConvexPanel/H/CancelButton")
focus_next = NodePath("../../../Body/V/M/FriedConvexPanel/H/CancelButton")
focus_previous = NodePath(".")

[node name="V" type="VBoxContainer" parent="M/VBoxContainer/Body" index="0"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="M2" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/M2" index="0"]
layout_mode = 2
text = "Are you sure?"

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="1"]
layout_mode = 2

[node name="FriedConvexPanel" parent="M/VBoxContainer/Body/V/M" index="0" instance=ExtResource("3_s1ncp")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExitButton" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel/H" index="0" instance=ExtResource("4_c44hp")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_right = NodePath("../CancelButton")
focus_next = NodePath("../CancelButton")
focus_mode = 2
text = "Exit"
icon = null
alignment = 1

[node name="CancelButton" type="Button" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel/H" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../ExitButton")
text = "Cancel"
